@@ -11,8 +11,8 @@ PACKAGE=nonesuch
 VERSION=nonesuch
 AC_ARG_PROGRAM
 AC_PROG_INSTALL
-AC_OUTPUT(Makefile aux/Makefile)
-AC_CONFIG_AUX_DIR(aux)
+AC_OUTPUT(Makefile sub/Makefile)
+AC_CONFIG_AUX_DIR(sub)
 END
 
 cat > Makefile.am << 'END'
@@ -21,17 +21,17 @@ END
 
 echo '@setfilename textutils.info' > textutils.texi
 
-test -d aux || mkdir aux
+test -d sub || mkdir sub
 
-cat > aux/Makefile.am << 'END'
+cat > sub/Makefile.am << 'END'
 magic:
 	@echo $(DISTFILES)
 END
 
 $AUTOMAKE -a || exit 1
 
-test -f aux/texinfo.tex &&
-$MAKE -s -f aux/Makefile.in SHELL=/bin/sh magic | grep 'texinfo\.tex'
+test -f sub/texinfo.tex &&
+$MAKE -s -f sub/Makefile.in SHELL=/bin/sh magic | grep 'texinfo\.tex'
 stat=$?
 
 exit $stat
