@@ -1,5 +1,7 @@
 1999-08-26  Tom Tromey  <tromey@cygnus.com>
 
+	* texinfo8.test: Use directory named `sub'.
+
 	* symlink.test: Use directory named `sub' (just in case; for
 	Windows).
 
